use click instead of argparse for the CLI

--- a/package.yml
+++ b/package.yml
@@ -1,14 +1,15 @@
 name: actnow-scrape
 version: 0.0.0
 author: Lukas Stevens <mail@lukas-stevens.de>
+url: https://github.com/lukasstevens/actnow-scrape
 description: Scrape data from the members of the European Parliament (MEPs) from the
   official EU websites.
-url: https://github.com/lukasstevens/actnow-scrape
 requirements:
 - python ^3.7
 - requests ^2.22.0
 - beautifulsoup4 ^4.9.1
 - aiohttp ^3.6.2
+- click ^7.1.2
 entrypoints:
   console_scripts:
-  - actnow-scrape = actnow_scrape.__main__:main
+  - actnow-scrape = actnow_scrape.__main__:cli
